# InventoryManagement

./: .gitignore  CMakeLists.txt  LICENSE  README.md
client/curl/lib/: libcurl.exp  libcurl.lib
client/resources/: appicon.rc  resource.h  resource.rc  versioninfo.rc
client/src/: global.h  main.cpp
client/src/api/: api.cpp  api.h
client/src/datahandler/: Customer.cpp  Customer.h  Employee.cpp  Employee.h  Inventory.cpp  Inventory.h  LogIn.cpp  LogIn.h  Sales.cpp  Sales.h  accountManagement.cpp  accountManagement.h  getData.cpp  getData.h  mainHeader.cpp  mainHeader.h  test.cpp  test.h
client/src/ui/: form.cpp  form.h  form_button.cpp  form_button.h  form_main.cpp  form_main.h  form_menubar.cpp  form_menubar.h  form_menuitem.cpp  form_menuitem.h  form_menutop.cpp  form_menutop.h  form_menuuser.cpp  form_menuuser.h  form_staticlabel.cpp  form_staticlabel.h  form_underlinetxtbox.cpp  form_underlinetxtbox.h  objects.h
client/src/ui/content/: content.cpp  content.h  content_accounts.cpp  content_accounts.h  content_dashboard.cpp  content_dashboard.h  content_item.cpp  content_item.h  content_pointofsale.cpp  content_pointofsale.h  content_promotion.cpp  content_promotion.h  content_settings.cpp  content_settings.h
client/src/ui/content/item/: itemlist.cpp  itemlist.h  search.cpp  search.h
client/src/ui/popup/: popup_accounts.cpp  popup_accounts.h  popup_item.cpp  popup_item.h  popup_profile.cpp  popup_profile.h
nodejs/: config.json  package-lock.json  package.json
nodejs/server/: main.js  pages.js
src/: main.cpp
